--- a/functions/package.json
+++ b/functions/package.json
@@ -9,6 +9,7 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
     "react": "^16.6.3",
