--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
     "react": "^16.6.3",
