--- a/functions/package.json
+++ b/functions/package.json
@@ -13,8 +13,10 @@
     "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
+    "material-design-icons": "^3.0.1",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-svg-loader": "^2.1.0"
   },
   "private": true,
   "devDependencies": {
