--- a/functions/package.json
+++ b/functions/package.json
@@ -26,6 +26,7 @@
     "@babel/register": "^7.0.0",
     "babel-loader": "^8.0.4",
     "del": "^3.0.0",
+    "firebase-tools": "^6.1.1",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.2",
     "vinyl-named": "^1.1.0",
