--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,7 @@
     "material-design-icons": "^3.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-markdown": "^4.0.3",
     "react-svg-loader": "^2.1.0"
   },
   "private": true,
