convert picture + markdown

--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-markdown": "^4.0.3",
-    "react-svg-loader": "^2.1.0"
+    "react-svg-loader": "^2.1.0",
+    "tesseract.js": "^1.0.14"
   },
   "private": true,
   "devDependencies": {
