--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "express": "^4.16.4",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
+    "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
