improved html renderer + open / (home) route

--- a/firebase.json
+++ b/firebase.json
@@ -4,7 +4,7 @@
     "redirects": [
       {
         "source": "/",
-        "destination": "/en/plant/mentha",
+        "destination": "/fr",
         "type" : 302
       }
     ],
