--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ firebase-debug.log*
 public/modules
 public/modules/styles
 public/styles
-functions/server/templates/build
+functions/server/app/build*
 
 # Dependency directories
 node_modules/
